# HVCS

./: .gitignore  .mxproject  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  HVCS.ioc  README.md  build.ninja  cmake_install.cmake  compile_commands.json  stm32f030cctx_flash.ld
App/: adc_task.c  adc_task.h  app.c  app.h  board.h  charge_task.c  charge_task.h  cmd_line_task.c  cmd_line_task.h  command.c  command.h  pwm_out_task.c  pwm_out_task.h
Core/Inc/: main.h  stm32f0xx_it.h
Core/Src/: main.c  stm32f0xx_it.c
Utils/: adc.c  adc.h  cmd_line.c  cmd_line.h  delay.c  delay.h  pwm.c  pwm.h  uart.c  uart.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt  CMakeLists_old.txt  cmake_install.cmake
